TimeReport Action buttons  alignment issues
git-svn-id: https://subversion.assembla.com/svn/projectx-0/stable@1870 b02b8b71-e8a6-4a5c-b3be-45d727391186

--- a/Angular4.0/ProjectX/src/css/projectx.css
+++ b/Angular4.0/ProjectX/src/css/projectx.css
@@ -937,5 +937,7 @@ padding-left:0px!important;
 .sprint_hed{margin-bottom:0px!important;}
 }
 
+.datatable-row-detail .ngx-datatable .datatable-body{ border-right: 0; border-left: 0}
+
 .but_unvisible{ opacity: 0.5;}
 .but_visible{ opacity:1!important;}
